# practice

./: ecs-layout.md
2017-01-12/: CMakeLists.txt
2017-01-12/hello-world/: hello-world.c
2017-01-12/perf-test-1/: perf-test-1.c
2017-01-12/perf-test-2/: perf-test-2.c
2017-01-12/perf-test-3/: perf-test-3.c
2017-01-12/perf-test-4/: perf-test-4.c
2017-01-12/perf-test-5/: perf-test-5.c
2017-01-14/: CMakeLists.txt
2017-01-14/perf-test/: main.c
2017-01-15/perf-test/: main.c
