cmake_minimum_required (VERSION 2.6)

project (hello-world)
add_executable(hello-world hello-world/hello-world.c)

project (perf-test-1)
add_executable(perf-test-1 perf-test-1/perf-test-1.c)

project (perf-test-2)
add_executable(perf-test-2 perf-test-2/perf-test-2.c)

project (perf-test-3)
add_executable(perf-test-3 perf-test-3/perf-test-3.c)

project (perf-test-4)
add_executable(perf-test-4 perf-test-4/perf-test-4.c)

project (perf-test-5)
add_executable(perf-test-5 perf-test-5/perf-test-5.c)
